# ctr-prediction

./: .gitignore  pyproject.toml  pytest.ini  readme.md  setup.py
example/: tensorflow.ipynb
helpers/: callbacks.py  data.py  evaluation.py  trainer.py  utils.py
models/: autoint.py  dcn.py  dcnv2.py  deepwide.py  mlp.py
models/pytorch/: __init__.py  autoint.py  dcn.py  deepwide.py  final_mlp.py  mlp.py  wukong.py
models/tensorflow/: __init__.py  autoint.py  dcn.py  deepwide.py  final_mlp.py  gdcn.py  mlp.py
tests/pytorch/: conftest.py  test_pytorch_models.py
tests/tensorflow/: conftest.py  test_models.py  test_tf_models.py
